src/test/run-pass/task-comm-17.rs
// Issue #922

use std;
import task;

fn f() {
}

fn main() {
    task::spawn {|| f() };
}